--- a/sample/src/main/res/layout/widget_mail.xml
+++ b/sample/src/main/res/layout/widget_mail.xml
@@ -5,6 +5,6 @@
     android:layout_height="wrap_content"
     arc:fromDegrees="100"
     arc:toDegrees="260"
-    arc:childSize="40dp"
+    arc:childSize="@dimen/button_size"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:arc="http://schemas.android.com/apk/res-auto" />
