--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="button_size">40dp</dimen>
+    <dimen name="button_size_x1d5">60dp</dimen>
+    <dimen name="button_size_x2">80dp</dimen>
+    <dimen name="button_size_x3">120dp</dimen>
 </resources>
